# servicetitan-mcp

./: LICENSE  README.md  pyproject.toml
examples/: claude_desktop_config.json
servicetitan_mcp/: client.py  schemas.py  server.py
servicetitan_mcp/tools/: create_booking_request.py  get_available_slots.py  get_job_details.py  list_jobs.py  search_customers.py
tests/: test_tools.py
