[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "servicetitan-mcp"
version = "0.1.0"
description = "MCP server for ServiceTitan, the dominant vertical SaaS for home services and trades. 5 tools for AI receptionists and dispatchers to search customers, check live appointment availability, create booking requests, query jobs, and read job details for HVAC, plumbing, electrical, and trades workflows."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ryan Hammer (NoBanks)", email = "nobanksnearby@gmail.com" }]
requires-python = ">=3.11"
keywords = ["mcp", "model-context-protocol", "servicetitan", "trades", "hvac", "plumbing", "electrical", "vertical-saas", "ai-agents", "ai-receptionist", "dispatcher"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["mcp>=1.0.0", "httpx>=0.27.0", "pydantic>=2.0.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "respx>=0.20.0"]

[project.scripts]
servicetitan-mcp = "servicetitan_mcp.server:main_sync"

[project.urls]
Homepage = "https://servicetitan.com"
Repository = "https://github.com/NoBanks/servicetitan-mcp"

[tool.hatch.build.targets.wheel]
packages = ["servicetitan_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
